--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDYLOCABTFlqwef8zdpdSm42Upqun9XbCc" />
+            android:value="APIKEY" />
 
         <activity android:name=".ArticleActivity"></activity>
     </application>
